# admin-panel/src/api/proto-http/nft/index.ts
@@ -5,20 +5,25 @@
 export type Status =
   // Any used for query all mint requests aka "*"
   | "Any"
-  // Unknown — status after user upload refs to ddapp tx is unconfirmed;
+  // Unknown — status after user upload refs to ddapp tx is unconfirmed
   | "Unknown"
   // Pending — status after user upload refs to ddapp tx is  confirmed and art can be uploaded
   | "Pending"
-  // Failed — status after user upload refs to ddapp tx is failed for some reason;
+  // Failed — status after user upload refs to ddapp tx is failed for some reason
   | "Failed"
-  // UploadedOffchain — status after we draw art image and its ready to be uploaded to the blockchain;
+  // UploadedOffchain — status after we draw art image and its ready to be uploaded to the blockchain
   | "UploadedOffchain"
   // Uploaded — art image is done and uploaded to the blockchain;
   | "Uploaded"
-  // Burned — art image is  burned from blockchain and it ready to ship;
+  // Burned — art image is  burned from blockchain and it ready to ship
   | "Burned"
   // Shipped — art image is  burned from blockchain and actual piece of art is shipped irl.
   | "Shipped";
+// Request for ImageBySequenceNumber
+export type ImageBySequenceNumberRequest = {
+  sequenceNumber: number | undefined;
+};
+
 // Links to images
 export type ImageList = {
   // link to fullsized image
@@ -39,8 +44,6 @@ export type NFTMintRequest = {
   id: string | undefined;
   // eth address of minter account
   ethAddress: string | undefined;
-  // hash of mint transaction
-  TxHash: string | undefined;
   // sequence number of minted nft
   mintSequenceNumber: number | undefined;
   // user defined description of drawing
@@ -51,8 +54,10 @@ export type NFTMintRequest = {
 export type NFTMintRequestToUpload = {
   // array of images from which nft should be referenced
   sampleImages: ImageToUpload[] | undefined;
-  // mint request info
-  nftMintRequest: NFTMintRequest | undefined;
+  // user defined description of drawing
+  description: string | undefined;
+  // eth address of minter account
+  ethAddress: string | undefined;
 };
 
 // NFT request as is with status
@@ -65,10 +70,16 @@ export type NFTMintRequestWithStatus = {
   status: Status | undefined;
   // resulted nft url uploaded offchain i.e to s3 can be empty
   offchainUrl: string | undefined;
-  // resulted nft url uploaded offchain i.e to s3 can be empty
+  // resulted nft url uploaded to ipfs can be empty
   onchainUrl: string | undefined;
   // related only if status is burned or shipped
   shipping: Shipping | undefined;
+  // collection id
+  collection: string | undefined;
+  // duration eg 1m, 1h, 2m30s
+  duration: string | undefined;
+  // author of picture
+  author: string | undefined;
 };
 
 // Shipping info
@@ -119,6 +130,8 @@ export type UpdateNFTOffchainUrlRequest = {
   id: string | undefined;
   // resulted nft raw image b64 encoded
   nftOffchainUrl: ImageToUpload | undefined;
+  // collection id
+  collectionId: string | undefined;
 };
 
 // Burn
@@ -147,9 +160,10 @@ export interface Nft {
   DeleteNFTMintRequestById(request: DeleteId): Promise<DeleteStatus>;
   // Upload resulted nft offchain from b64
   // possble statuses: Pending, UploadedOffchain, Uploaded
+  // set status to UploadedOffchain
   UpdateNFTOffchainUrl(request: UpdateNFTOffchainUrlRequest): Promise<NFTMintRequestWithStatus>;
-  // Remove nft offchain url from mint request and change status to Pending
-  DeleteNFTOffchainUrl(request: DeleteId): Promise<NFTMintRequestWithStatus>;
+  // Remove nft onchain url from mint request and change status to Pending
+  DeleteNFTOnchainUrl(request: DeleteId): Promise<NFTMintRequestWithStatus>;
   // Burn remove nft from contract and set shipping info and set status Burned
   // possble statuses: Uploaded
   Burn(request: BurnRequest): Promise<wellKnownEmpty>;
@@ -164,7 +178,7 @@ type RequestType = {
   body: string | null;
 };
 
-type RequestHandler = (request: RequestType) => Promise<unknown>;
+type RequestHandler = (request: RequestType, meta: { service: string, method: string }) => Promise<unknown>;
 
 export function createNftClient(
   handler: RequestHandler
@@ -182,6 +196,9 @@ export function createNftClient(
         path: uri,
         method: "POST",
         body,
+      }, {
+        service: "Nft",
+        method: "NewNFTMintRequest",
       }) as Promise<NFTMintRequestWithStatus>;
     },
     ListNFTMintRequestsPaged(request) { // eslint-disable-line @typescript-eslint/no-unused-vars
@@ -202,6 +219,9 @@ export function createNftClient(
         path: uri,
         method: "GET",
         body,
+      }, {
+        service: "Nft",
+        method: "ListNFTMintRequestsPaged",
       }) as Promise<NFTMintRequestListArray>;
     },
     DeleteNFTMintRequestById(request) { // eslint-disable-line @typescript-eslint/no-unused-vars
@@ -219,6 +239,9 @@ export function createNftClient(
         path: uri,
         method: "DELETE",
         body,
+      }, {
+        service: "Nft",
+        method: "DeleteNFTMintRequestById",
       }) as Promise<DeleteStatus>;
     },
     UpdateNFTOffchainUrl(request) { // eslint-disable-line @typescript-eslint/no-unused-vars
@@ -233,9 +256,12 @@ export function createNftClient(
         path: uri,
         method: "POST",
         body,
+      }, {
+        service: "Nft",
+        method: "UpdateNFTOffchainUrl",
       }) as Promise<NFTMintRequestWithStatus>;
     },
-    DeleteNFTOffchainUrl(request) { // eslint-disable-line @typescript-eslint/no-unused-vars
+    DeleteNFTOnchainUrl(request) { // eslint-disable-line @typescript-eslint/no-unused-vars
       if (!request.id) {
         throw new Error("missing required field request.id");
       }
@@ -250,6 +276,9 @@ export function createNftClient(
         path: uri,
         method: "DELETE",
         body,
+      }, {
+        service: "Nft",
+        method: "DeleteNFTOnchainUrl",
       }) as Promise<NFTMintRequestWithStatus>;
     },
     Burn(request) { // eslint-disable-line @typescript-eslint/no-unused-vars
@@ -264,6 +293,9 @@ export function createNftClient(
         path: uri,
         method: "POST",
         body,
+      }, {
+        service: "Nft",
+        method: "Burn",
       }) as Promise<wellKnownEmpty>;
     },
     SetTrackingNumber(request) { // eslint-disable-line @typescript-eslint/no-unused-vars
@@ -278,6 +310,9 @@ export function createNftClient(
         path: uri,
         method: "POST",
         body,
+      }, {
+        service: "Nft",
+        method: "SetTrackingNumber",
       }) as Promise<wellKnownEmpty>;
     },
   };
